--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,15 @@
+.app {
+	width: 100%;
+	height: 100vh;
+	position: relative;
+}
+
+.spinner {
+	position: absolute;
+	top: 45%;
+	left: 45%;
+}
+
 .root {
 	display: flex;
 	flex-direction: column;
