--- a/src/components/CarouselImage/CarouselImage.module.css
+++ b/src/components/CarouselImage/CarouselImage.module.css
@@ -1,18 +1,18 @@
 .carousel {
-	margin: 0;
-}
-
-.carousel img {
-	width: 100%;
+	position: relative;
 }
 
 .carousel .caption {
+	position: absolute;
 	top: 0;
 }
 
+.carousel .caption .title {
+	color: #ffffff;
+}
+
 @media (max-width: 600px) {
-	.carousel .title {
-		color: #ffffff;
-		font-size: 0.9rem;
+	.carousel .caption .title {
+		font-size: 1rem;
 	}
 }
